tests/NormalTests/paczka1/fuzzy1/99958012.err
Error in line 5: S361 S691 81,0
Error in line 12: xHxKTyO A466 54,9
Error in line 21: xHxKTyO S361 14,5
Error in line 33: G04bzog A466 97,4
